--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "eslint-plugin-jest": "^27.2.1",
+    "Faker": "^0.7.2",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   },
